--- a/SistemaDemanutencao/SistemaDeLogin/SistemaDeManutencao.csproj
+++ b/SistemaDemanutencao/SistemaDeLogin/SistemaDeManutencao.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADM_BD.cs" />
     <Compile Include="BD_UsuarioDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
