--- a/SistemaDemanutencao/SistemaDeLogin/SistemaDeManutencao.csproj
+++ b/SistemaDemanutencao/SistemaDeLogin/SistemaDeManutencao.csproj
@@ -62,11 +62,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADM_BD.cs" />
+    <Compile Include="ADM_BD_Cliente.cs" />
     <Compile Include="AlterarConta.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AlterarConta.Designer.cs">
       <DependentUpon>AlterarConta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AlterarConta_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlterarConta_Cliente.Designer.cs">
+      <DependentUpon>AlterarConta_Cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BD_ClienteDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BD_ClienteDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="BD_UsuarioDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -79,11 +91,23 @@
     <Compile Include="ExcluirConta.Designer.cs">
       <DependentUpon>ExcluirConta.cs</DependentUpon>
     </Compile>
+    <Compile Include="ExcluirConta_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ExcluirConta_Cliente.Designer.cs">
+      <DependentUpon>ExcluirConta_Cliente.cs</DependentUpon>
+    </Compile>
     <Compile Include="IncluirConta.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IncluirConta.Designer.cs">
       <DependentUpon>IncluirConta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="IncluirConta_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="IncluirConta_Cliente.Designer.cs">
+      <DependentUpon>IncluirConta_Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
@@ -102,11 +126,20 @@
     <EmbeddedResource Include="AlterarConta.resx">
       <DependentUpon>AlterarConta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="AlterarConta_Cliente.resx">
+      <DependentUpon>AlterarConta_Cliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ExcluirConta.resx">
       <DependentUpon>ExcluirConta.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ExcluirConta_Cliente.resx">
+      <DependentUpon>ExcluirConta_Cliente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="IncluirConta.resx">
       <DependentUpon>IncluirConta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="IncluirConta_Cliente.resx">
+      <DependentUpon>IncluirConta_Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -123,6 +156,17 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="BD_ClienteDataSet.xsc">
+      <DependentUpon>BD_ClienteDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="BD_ClienteDataSet.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BD_ClienteDataSet.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="BD_ClienteDataSet.xss">
+      <DependentUpon>BD_ClienteDataSet.xsd</DependentUpon>
+    </None>
     <None Include="BD_UsuarioDataSet.xsc">
       <DependentUpon>BD_UsuarioDataSet.xsd</DependentUpon>
     </None>
@@ -160,6 +204,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="BD_Cliente.mdf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="BD_Cliente_log.ldf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <DependentUpon>BD_Cliente.mdf</DependentUpon>
+    </Content>
     <Content Include="BD_Usuario.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
